[package]
name = "SkRustNetworking"
version = "0.1.0"
authors = ["sulabhkothari <sulabh.kothari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.4", default-features = true }
tokio = { version = "0.2", features = ["full"] }